src/test/examples/invalid/semanticErr/extension/class/constructorMissingAttributeEasy.wacc
begin
  class H is 
    private int v
    H() end
  end
  int u = 0
end